# Copyright (c) Facebook, Inc. and its affiliates.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# --------------------------------------------------------------------------
# Copyright (c) ByteDance Ltd. and/or its affiliates.
# SPDX-License-Identifier: Apache-2.0
#
# This file has been modified by ByteDance Ltd. and/or its affiliates on
# 2025-11-11.
#
# Original file was released under the Apache License 2.0,
# with the full license text available at:
#     http://www.apache.org/licenses/LICENSE-2.0
#
# This modified file is released under the same license.
# --------------------------------------------------------------------------

add_subdirectory(exception)

if(${BOLT_BUILD_TESTING})
  add_subdirectory(tests)
  if(${BOLT_ENABLE_PARQUET})
    add_subdirectory(fuzzer)
  endif()
elseif(${BOLT_BUILD_TEST_UTILS})
  add_subdirectory(tests/utils)
endif()

add_library(
  bolt_dwio_common
  BitConcatenation.cpp
  BitPackDecoder.cpp
  BufferedInput.cpp
  CachedBufferedInput.cpp
  CacheInputStream.cpp
  ColumnLoader.cpp
  ColumnSelector.cpp
  compression/Compression.cpp
  compression/PagedInputStream.cpp
  compression/PagedOutputStream.cpp
  DataBufferHolder.cpp
  DecoderUtil.cpp
  DirectBufferedInput.cpp
  DirectDecoder.cpp
  DirectInputStream.cpp
  DwioMetricsLog.cpp
  encryption/Encryption.cpp
  ExecutorBarrier.cpp
  FileSink.cpp
  FlatMapHelper.cpp
  InputStream.cpp
  IntDecoder.cpp
  MetadataFilter.cpp
  Options.cpp
  OutputStream.cpp
  ParallelFor.cpp
  Range.cpp
  Reader.cpp
  ReaderFactory.cpp
  ScanSpec.cpp
  SeekableInputStream.cpp
  SelectiveByteRleColumnReader.cpp
  SelectiveColumnReader.cpp
  SelectiveRepeatedColumnReader.cpp
  SelectiveStructColumnReader.cpp
  SortingWriter.cpp
  SortingWriter.cpp
  SortingWriter.h
  TypeUtils.cpp
  TypeWithId.cpp
  Writer.cpp
  WriterFactory.cpp
)

target_link_libraries(
  bolt_dwio_common
  bolt_vector_test_lib
  bolt_buffer
  bolt_caching
  bolt_common_io
  bolt_common_compression
  bolt_common_config
  bolt_dwio_common_exception
  bolt_exception
  bolt_expression
  bolt_memory
  bolt_exec
  bolt_filter
  Folly::folly
  glog::glog
  protobuf::protobuf
  LZ4::lz4_static
  arrow::arrow
)
